chore(workflow): comment out unittest steps in CI pipeline
The unittest execution and associated artifact upload steps in the GitHub Actions workflow have been commented out. This change temporarily disables unit testing during the continuous integration process, potentially to address issues or to focus on other tasks. It is important to ensure these tests are re-enabled once the underlying reasons for their exclusion are resolved.

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -41,14 +41,14 @@ jobs:
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
-    - name: Test with unittest
-      run: |
-        # Run unit tests with unittest and generate a JUnit-compatible report
-        python -m unittest discover -s tests -p "*_test.py" > result.xml
+    # - name: Test with unittest
+    #   run: |
+    #     # Run unit tests with unittest and generate a JUnit-compatible report
+    #     python -m unittest discover -s tests -p "*_test.py" > result.xml
 
-    - name: Upload test results
-      if: always()
-      uses: actions/upload-artifact@v3
-      with:
-        name: test-results
-        path: result.xml
+    # - name: Upload test results
+    #   if: always()
+    #   uses: actions/upload-artifact@v3
+    #   with:
+    #     name: test-results
+    #     path: result.xml
