chore(ci): add ruff and no_implicit_optional to workflow
This commit updates the GitHub Actions workflow for Python packages by adding the installation of `ruff` and `no_implicit_optional`. The workflow now includes a step for code formatting using `ruff` and another step for removing implicit optionals with `no_implicit_optional` targeting the `FinStoch/` directory. These changes aim to improve code quality and consistency across the project. Additionally, the build process remains robust as linting with `flake8` and testing with `pytest` are retained in the workflow.

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -30,9 +30,22 @@ jobs:
 
     - name: Install dependencies
       run: |
+        pip install ruff
+        pip install no_implicit_optional
         python -m pip install --upgrade pip
         python -m pip install flake8 pytest
         if (Test-Path requirements.txt) { pip install -r requirements.txt }
+
+    - name: Format code with ruff
+      run: |
+        ruff format
+
+    - name: Remove Implicit Optionals with no_implicit_optional
+      run: |
+          no_implicit_optional FinStoch/
+
+    - name: Test with pytest
+      run: |
 
     - name: Lint with flake8
       run: |
