--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -30,6 +30,7 @@ jobs:
 
     - name: Install dependencies
       run: |
+        pip install mypy
         pip install ruff
         pip install no_implicit_optional
         python -m pip install --upgrade pip
@@ -42,7 +43,7 @@ jobs:
 
     - name: Remove Implicit Optionals with no_implicit_optional
       run: |
-          no_implicit_optional FinStoch/
+        no_implicit_optional FinStoch/
 
     - name: Lint with flake8
       run: |
@@ -50,6 +51,10 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    
+    - name: Type check with mypy
+      run: |
+        mypy . --exclude venv --ignore-missing-imports
 
     - name: Test with unittest
       run: |
