ci(workflow): add install-types flag to mypy type check
The addition of the --install-types flag in the mypy command within the GitHub Actions workflow ensures that missing type stubs for third-party libraries are automatically installed. This change aims to improve the accuracy of type checking by resolving any missing type information that was previously ignored, enhancing code quality and preventing potential runtime errors related to incorrect types.

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -54,7 +54,7 @@ jobs:
     
     - name: Type check with mypy
       run: |
-        mypy . --exclude venv --ignore-missing-imports
+        mypy . --exclude venv --ignore-missing-imports --install-types
 
     - name: Test with unittest
       run: |
