--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -54,7 +54,7 @@ jobs:
     
     - name: Type check with mypy
       run: |
-        mypy . --exclude venv --ignore-missing-imports --install-types
+        mypy . --exclude venv --ignore-missing-imports
 
     - name: Test with unittest
       run: |
