fix(workflow): correct pip install command for types-python-dateutil
Changed the installation command for types-python-dateutil to use the python -m pip syntax to ensure compatibility and avoid potential issues in environments where direct pip calls may not resolve correctly.

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -34,7 +34,7 @@ jobs:
         pip install ruff
         pip install no_implicit_optional
         python -m pip install --upgrade pip
-        pip install types-python-dateutil
+        python -m pip install types-python-dateutil
         python -m pip install flake8 pytest
         if (Test-Path requirements.txt) { pip install -r requirements.txt }
 
