ci(workflow): customize test result filenames based on Python version
Modified the artifact naming in the GitHub Actions workflow to include the Python version. This allows for better distinction between test results from different Python environments, especially when running matrix builds.

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -66,5 +66,5 @@ jobs:
       if: always()
       uses: actions/upload-artifact@v4
       with:
-        name: test-results
-        path: result.xml
+        name: test-results${{matrix.python-version}}
+        path: result${{matrix.python-version}}.xml
