--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -67,4 +67,4 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: test-results${{matrix.python-version}}
-        path: result${{matrix.python-version}}.xml
+        path: result.xml
