--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 matplotlib==3.7.1
-numba==0.60.0
-numpy==1.23.5
-pandas==2.0.3
-python_dateutil==2.9.0.post0
+scipy==1.8.1
+setuptools==67.7.2
+setuptools==58.1.0
