--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-matplotlib==3.7.1
-scipy==1.8.1
-numpy==1.23.5
-pandas==2.0.3
-python_dateutil==2.9.0.post0
+matplotlib~=3.7.1
+scipy~=1.8.1
+numpy~=1.23.5
+pandas~=2.0.3
+python_dateutil~=2.9.0.post0
